# OpenFanHub

./: .gitmodules  README.md
Firmware/openfanhub_rs/: Cargo.toml  memory.x
Firmware/openfanhub_rs/src/: fan.rs  fanmanager.rs  main.rs  timer.rs
Firmware/openfanhub_rs/src/targets/: default.rs  mod.rs
Firmware/src/: .cproject  .mxproject  .project  CMakeLists.txt  config.h  fan.c  fan.h  openfanhub.c  usb_descriptor.desc
Firmware/src/STM32F1/: .cproject  .mxproject  STM32F103.ioc
Firmware/src/STM32F1/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usbd_conf.h  usbd_custom_hid_if.h
Firmware/src/STM32F1/Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
Firmware/src/STM32F1/Src/: adc.c  gpio.c  i2c.c  main.c  stm32f1xx_it.c  tim.c  usbd_custom_hid_if.c  usbd_desc.c
Hardware/: STM32F103.ioc
Hardware/openfanhub/: _autosave-fan_connector.sch  _autosave-pwm_group.sch  fan_connector.kicad_sch  fan_connector.sch  fan_connector.sch-bak  file61C7C7AB.sch  fp-info-cache  openfanhub-cache.lib  openfanhub.kicad_pcb  openfanhub.kicad_pcb-bak  openfanhub.kicad_sch  openfanhub.sch  openfanhub.sch-bak  pwm_group.kicad_sch  pwm_group.sch  pwm_group.sch-bak  pwm_group1.kicad_sch  pwm_group1.sch  pwm_groups.kicad_sch  pwm_groups.sch  pwm_groups.sch-bak
